crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_unverified__coffee_definitions.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "uri": "<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml"
  },
  "response": []
}
