crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_unverified__coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "uri": "<BOOK>/examples/coffee-machine/views.sysml"
  },
  "response": []
}
