crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_unverified__stdlib_base.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "uri": "<WS>/libraries/standard/library.kernel/Base.kerml"
  },
  "response": []
}
